--- a/Styles/styles-personal.css
+++ b/Styles/styles-personal.css
@@ -6,6 +6,11 @@
     background-color: rgb(114, 208, 205);
 }
 
+main {
+    min-height: 60vh;
+    padding-bottom: 60px;
+}
+
 .Header {
     display: block;
 }
@@ -26,7 +31,7 @@ H1 {
     position: relative;
     text-align: left;
     left: 60px;
-    bottom: -525px;
+    top: 605px;
     z-index: 2;
     background-color: transparent;
 }
@@ -71,13 +76,14 @@ H2 {
     text-align: center;
     border: 2px solid black;
     top: 8px;
+    padding-bottom: 10px;
 }
 
 .Logo {
     position: absolute;
     width: 300px;
-    top: 615px;
-    right: 20px;
+    top: 626px;
+    right: 30px;
     z-index: 2;
     background-color: transparent;
 }
@@ -92,9 +98,69 @@ H2 {
     background-color: rgb(114, 208, 205);
 }
 
+.important {
+    font-style: italic;
+    font-size: 25px;
+    color: rgb(225, 255, 0);
+    text-shadow: 1px 1px 2px black, 0 0 1em orange, 0 0 0.2em orange;
+    text-decoration: rgb(255, 205, 112) underline;
+    text-align: center;
+    padding: 30px;
+}
+
 p {
     position: relative;
     left: 20px;
     text-align: justify;
     padding: 20px;
+}
+
+table {
+    position: relative;
+    font-size: 20px;
+    width: 1100px;
+    text-align: center;
+    margin: 10px;
+}
+
+th {
+    font-size: 26px;
+}
+
+td {
+    padding: 10px;
+}
+
+.list{
+    position: relative;
+    left: 20px;
+    text-align: justify;
+    padding: 20px;
+}
+
+li{
+    padding: 10px;
+}
+
+.sub_list{
+    list-style-type: lower-alpha;
+    position: relative;
+    left: 20px;
+    text-align: justify;
+    padding: 10px;
+}
+
+ul{
+    list-style-type: circle;
+    position: relative;
+    left: 20px;
+    text-align: justify;
+    padding: 5px;
+}
+
+footer>p {
+    position: relative;
+    padding-top: 32px;
+    min-height: 30vh;
+    text-align: center;
 }
