--- a/Styles/styles-personal.css
+++ b/Styles/styles-personal.css
@@ -158,6 +158,42 @@ ul{
     padding: 5px;
 }
 
+form{
+    margin: 0 auto;
+    margin-top: 5em;
+    width: 900px;
+    padding: 3em;
+    border: 1px solid #CCC;
+    border-radius: 1em;   
+}
+
+label {
+    display: inline-block;
+    width: 150px;
+    text-align: left;
+  }
+
+.gender {
+    text-align: right;
+}
+
+  input,textarea {
+  font: 1em sans-serif;
+  width: 200px;
+  box-sizing: border-box;
+  border: 1px solid #999;
+}
+
+input[type=radio] {
+    box-sizing: border-box;
+    border: 1px solid #999;
+}
+
+button{
+  
+    margin-left: .5em;
+}
+
 footer>p {
     position: relative;
     padding-top: 32px;
